--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
                 cppFlags '-std=c++11'
             }
         }
+
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
+
     }
 
     buildTypes {
